[workspace]
resolver = "2"
exclude = ["tmp/*"]
members = [
    "packages/anyrender",
    "packages/anyrender_svg", 
    "packages/anyrender_vello",
    "packages/anyrender_vello_cpu",
    "packages/blitz",
    "packages/blitz-dom",
    "packages/blitz-font",
    "packages/blitz-html",
    "packages/blitz-net",
    "packages/blitz-paint",
    "packages/blitz-shell",
    "packages/blitz-text",
    "packages/blitz-traits",
    "packages/mini-dxn",
    "packages/stylo_taffy",
    "examples/wgpu_texture",
]

[workspace.package]
edition = "2024"
repository = "https://github.com/cyrup-ai/blitz"

[patch.crates-io]
selectors = { git = "https://github.com/cyrup-ai/stylo", branch = "main" }
markup5ever = { git = "https://github.com/cyrup-ai/html5ever", branch = "main" }
web_atoms = { git = "https://github.com/cyrup-ai/html5ever", branch = "main" }
html5ever = { git = "https://github.com/cyrup-ai/html5ever", branch = "main" }

[patch."https://github.com/cyrup-ai/blitz"]
blitz-text = { path = "packages/blitz-text" }