[package]
name = "anyrender_example"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT OR Apache-2.0"

[dependencies]
kurbo = "0.11.3"
winit = "0.30.12"
peniko = "0.4.0"
wgpu = { path = "../../../wgpu/wgpu" }
anyrender = { path = "../../packages/anyrender" }
anyrender_vello = { path = "../../packages/anyrender_vello" }
anyrender_vello_cpu = { path = "../../packages/anyrender_vello_cpu" }

