# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: MIT

[package]
name = "wgpu_texture"
version = "0.0.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT"
publish = false

[dependencies]
anyrender = { path = "../../packages/anyrender" }
anyrender_vello = { path = "../../packages/anyrender_vello" }
blitz-traits = { path = "../../packages/blitz-traits" }
blitz-dom = { path = "../../packages/blitz-dom" }
blitz-html = { path = "../../packages/blitz-html" }
blitz-shell = { path = "../../packages/blitz-shell" }
mini-dxn = { path = "../../packages/mini-dxn" }
dioxus = { path = "../../../dioxus/packages/dioxus" }
wgpu = { path = "../../../wgpu/wgpu" }
color = "0.3.1"
bytemuck = "1.23.1"
pollster = "0.4.0"
